# saathi-shikshak

./: .gitignore  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .dockerignore  .gitattributes  .railwayignore  Dockerfile  README.md  pyproject.toml  railway.json
backend/app/: main.py
backend/app/api/v1/: auth.py  feedback.py  query.py  scenarios.py  session.py
backend/app/core/: config.py  database.py  redis_client.py
backend/app/llm/: claude_client.py  response_parser.py
backend/app/models/: db_models.py  request.py  response.py
backend/app/rag/: context_builder.py  retrieval.py
backend/data/chroma/17a833f3-3c3c-4a25-8515-a0e5d9267d53/: index_metadata.pickle
frontend/: index.html  lighthouse-report.json  package.json  vercel.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  firebase.ts  index.css  (+1 more)
offline-scenarios/: ab_001_en.json  ab_001_hi.json  as_001_en.json  as_001_hi.json  by_001_en.json  by_001_hi.json  cb_001_en.json  cb_001_hi.json  cb_005_en.json  cb_005_hi.json  cb_006_en.json  cb_006_hi.json  fl_001_en.json  fl_001_hi.json  fl_003_en.json  fl_003_hi.json  fl_007_en.json  fl_007_hi.json  fn_001_en.json  fn_001_hi.json  fn_003_en.json  fn_003_hi.json  fn_006_en.json  fn_006_hi.json  in_001_en.json  in_001_hi.json  in_003_en.json  in_003_hi.json  lp_e_001_en.json  lp_e_001_hi.json  lp_h_001_en.json  lp_h_001_hi.json  lp_m_001_en.json  lp_m_001_hi.json  ma_001_en.json  ma_001_hi.json  ma_002_en.json  ma_002_hi.json  ml_001_en.json  ml_001_hi.json  (+4 more)
scripts/: diagnose.py  generate_scenarios.py  ingest.py
(+19 files in other folders)
